--- a/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -847,6 +847,8 @@ StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
+GeomModifier_Pen.Settings=True
+MovingPlatform.Moving Platform=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1833,8 +1835,8 @@ SkeletonEditor.TimeStamp=2022.09.12-20.14.33
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.09.12-20.14.32
 PinnedCommandList.LastCompileMethod=Unknown
-TempleRun.TimeStamp=2022.09.24-05.23.33
-TempleRun.LastCompileMethod=Unknown
+TempleRun.TimeStamp=2022.09.24-19.16.28
+TempleRun.LastCompileMethod=External
 
 [Python]
 LastDirectory=
@@ -1859,4 +1861,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+GeomModifier_Pen="\"Object.Settings\" "
+GeomModifier_Edit="\"Object.Settings\" "
+GeomModifier="\"Object.Settings\" "
 
