--- a/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -179,11 +179,11 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.ActiveTypeFilters=StaticMesh
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/TempleRun
+ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -191,6 +191,30 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.Locked=False
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
+ContentBrowserTab1.ActiveFrontendFilters=
+ContentBrowserTab1.EnabledFrontendFilters=
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Main
@@ -849,6 +873,43 @@ StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
 GeomModifier_Pen.Settings=True
 MovingPlatform.Moving Platform=True
+BP_MovingPlatform_C.Moving Platform=True
+BP_MovingPlatform_C.Tick=True
+BP_MovingPlatform_C.Replication=True
+BP_MovingPlatform_C.Rendering=True
+BP_MovingPlatform_C.Collision=True
+BP_MovingPlatform_C.Actor=True
+BP_MovingPlatform_C.Input=True
+BP_MovingPlatform_C.HLOD=True
+BP_MovingPlatform_C.WorldPartition=True
+BP_MovingPlatform_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BP_MovingPlatform_C.TransformCommon=True
+BP_Pillar_C.Moving Platform=True
+BP_Pillar_C.Tick=True
+BP_Pillar_C.Replication=True
+BP_Pillar_C.Rendering=True
+BP_Pillar_C.Collision=True
+BP_Pillar_C.Actor=True
+BP_Pillar_C.Input=True
+BP_Pillar_C.HLOD=True
+BP_Pillar_C.WorldPartition=True
+BP_Pillar_C.Events=True
+BP_Pillar_C.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -858,20 +919,26 @@ SourceCodeAccessSettings=True
 LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_Pillar.BP_Pillar;
+RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Script/TempleRun.MovingPlatform;
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem1=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
-MRUItem2=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter_Optimized
-MRUItem3=/Game/BlockGame/PlayerCharacter/SK_BlockCharacter
+MRUItem0=/Game/BP_Pillar
+MRUItem1=/Game/BP_MovingPlatform
+MRUItem2=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem3=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
+MRUItem4=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter_Optimized
+MRUItem5=/Game/BlockGame/PlayerCharacter/SK_BlockCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
 /Game/BlockGame/PlayerCharacter/SK_BlockCharacter.SK_BlockCharacter=1
 /Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter_Optimized.SK_EpicCharacter_Optimized=1
 /Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter.SK_EpicCharacter=1
+/Game/BP_MovingPlatform.BP_MovingPlatform=0
+/Game/BP_Pillar.BP_Pillar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
