--- a/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TempleRun/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -101,6 +101,7 @@ LastExecutedLaunchName=DESKTOP-QSI2CGF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -183,7 +184,7 @@ ContentBrowserDrawer.ActiveTypeFilters=StaticMesh
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/TempleRun
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -215,12 +216,16 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/BP_PushingCube.BP_PushingCube
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
 
 [DetailCategories]
 SkeletalMeshActor.TransformCommon=True
@@ -910,6 +915,81 @@ BP_Pillar_C.HLOD=True
 BP_Pillar_C.WorldPartition=True
 BP_Pillar_C.Events=True
 BP_Pillar_C.TransformCommon=True
+BP_Pillar_C.MovingPlatform=True
+BP_PushingCube_C.Moving Platform=True
+BP_PushingCube_C.Tick=False
+BP_PushingCube_C.Replication=True
+BP_PushingCube_C.Rendering=True
+BP_PushingCube_C.Collision=True
+BP_PushingCube_C.Actor=True
+BP_PushingCube_C.Input=True
+BP_PushingCube_C.HLOD=True
+BP_PushingCube_C.WorldPartition=True
+BP_PushingCube_C.Events=True
+BP_PushingCube_C.TransformCommon=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+BP_TRGameMode_C.Tick=True
+BP_TRGameMode_C.Classes=True
+BP_TRGameMode_C.Game=True
+BP_TRGameMode_C.GameMode=True
+BP_TRGameMode_C.Events=True
+BP_Pillar_C.Moving=True
+BP_Pillar_C.Rotate=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -919,18 +999,22 @@ SourceCodeAccessSettings=True
 LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/BP_PushingCube.BP_PushingCube;
 RecentlyPlaced=/Game/BP_Pillar.BP_Pillar;
 RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Script/TempleRun.MovingPlatform;
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_Pillar
-MRUItem1=/Game/BP_MovingPlatform
-MRUItem2=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem3=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
-MRUItem4=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter_Optimized
-MRUItem5=/Game/BlockGame/PlayerCharacter/SK_BlockCharacter
+MRUItem0=/Game/BP_TRGameMode
+MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem2=/Game/BP_PushingCube
+MRUItem3=/Game/BP_Pillar
+MRUItem4=/Game/BP_MovingPlatform
+MRUItem5=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
+MRUItem6=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter_Optimized
+MRUItem7=/Game/BlockGame/PlayerCharacter/SK_BlockCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
@@ -939,6 +1023,8 @@ MRUItem5=/Game/BlockGame/PlayerCharacter/SK_BlockCharacter
 /Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter.SK_EpicCharacter=1
 /Game/BP_MovingPlatform.BP_MovingPlatform=0
 /Game/BP_Pillar.BP_Pillar=0
+/Game/BP_PushingCube.BP_PushingCube=0
+/Game/BP_TRGameMode.BP_TRGameMode=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1902,7 +1988,7 @@ SkeletonEditor.TimeStamp=2022.09.12-20.14.33
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.09.12-20.14.32
 PinnedCommandList.LastCompileMethod=Unknown
-TempleRun.TimeStamp=2022.09.24-19.16.28
+TempleRun.TimeStamp=2022.09.30-06.41.00
 TempleRun.LastCompileMethod=External
 
 [Python]
@@ -1931,4 +2017,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
